--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -1,15 +1,39 @@
 .subscription {
-  display: inline-flex;
-  gap: 12px;
+  @media screen and (min-width: 480px) {
+    & {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+    &__form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+    &__label--mobile {
+      text-align: center;
+    }
+    &__input {
+      min-width: 450px;
+    }
+    &__btn {
+      display: inline-flex;
 
-  &__form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+      min-width: 200px;
+    }
   }
+  // display: inline-flex;
+  // gap: 12px;
+
+  // &__form {
+  //   display: flex;
+  //   flex-direction: column;
+  //   gap: 20px;
+  // }
 
   &__label {
-    padding-top: 12px;
+    // padding-top: 12px;
     font-weight: 700;
     font-size: 14px;
     line-height: calc(16 / 14);
@@ -18,7 +42,7 @@
     color: $hero-color;
   }
   &__input {
-    min-width: 358px;
+    // min-width: 358px;
     padding: 15px 16px;
     font-size: 16px;
     line-height: calc(20 / 16);
@@ -36,9 +60,9 @@
   }
   &__btn {
     position: relative;
-    margin-top: 48px;
+    // margin-top: 48px;
     padding: 10px 62px 10px 28px;
-    min-width: 200px;
+    // min-width: 200px;
     height: 50px;
 
     font-weight: 700;
