--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,20 +6,19 @@
   color: $accent-color;
 
 
- @media screen and (max-width: 767px){
+ @media screen and (max-width: 1199px){
   &--footer {
+    display: block;
     text-align: center;
     margin-bottom: 20px;
  }
-}
-
-
-  @media screen and (max-width: 1199px) {
-    & {
+  & {
       font-size: 24px;
       line-height: calc(28 / 24);
     }
-  }
+}
+
+  
   @media screen and (min-width: 1200px) {
     & {
       font-size: 26px;
