--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -1,5 +1,52 @@
 .subscription {
-  @media screen and (min-width: 480px) {
+  &__btn {
+    position: relative;
+    padding: 10px 62px 10px 28px;
+    height: 50px;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30 / 16);
+    letter-spacing: 0.06em;
+
+    color: $hero-color;
+
+    background: $accent-bg-color;
+    box-shadow: 0px 4px 4px $box-shadow-color;
+    border-radius: 4px;
+    border: transparent;
+  }
+  &__icon {
+    position: absolute;
+    top: 13px;
+    right: 28px;
+    fill: $header-bg-color;
+  }
+  &__label {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: calc(16 / 14);
+    text-transform: uppercase;
+
+    color: $hero-color;
+  }
+  &__input {
+    padding: 15px 16px;
+    font-size: 16px;
+    line-height: calc(20 / 16);
+    color: var(--hero-color);
+    border: 1px solid $input-border-color;
+    filter: drop-shadow(0px 4px 4px $box-shadow-color);
+    border-radius: 4px;
+    background-color: transparent;
+  }
+  &__input::placeholder {
+    font-size: 16px;
+    line-height: calc(20 / 16);
+
+    color: $address-color;
+  }
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
     & {
       display: flex;
       flex-direction: column;
@@ -23,65 +70,68 @@
       min-width: 200px;
     }
   }
-  // display: inline-flex;
-  // gap: 12px;
 
-  // &__form {
-  //   display: flex;
-  //   flex-direction: column;
-  //   gap: 20px;
-  // }
+  @media screen and (min-width: 1200px) {
+    display: inline-flex;
+    gap: 12px;
 
-  &__label {
-    // padding-top: 12px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    text-transform: uppercase;
+    &__form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
 
-    color: $hero-color;
-  }
-  &__input {
-    // min-width: 358px;
-    padding: 15px 16px;
-    font-size: 16px;
-    line-height: calc(20 / 16);
-    color: var(--hero-color);
-    border: 1px solid $input-border-color;
-    filter: drop-shadow(0px 4px 4px $box-shadow-color);
-    border-radius: 4px;
-    background-color: transparent;
-  }
-  &__input::placeholder {
-    font-size: 16px;
-    line-height: calc(20 / 16);
+    &__label {
+      padding-top: 12px;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: calc(16 / 14);
+      text-transform: uppercase;
 
-    color: $address-color;
-  }
-  &__btn {
-    position: relative;
-    // margin-top: 48px;
-    padding: 10px 62px 10px 28px;
-    // min-width: 200px;
-    height: 50px;
+      color: $hero-color;
+    }
+    &__input {
+      min-width: 358px;
+      padding: 15px 16px;
+      font-size: 16px;
+      line-height: calc(20 / 16);
+      color: var(--hero-color);
+      border: 1px solid $input-border-color;
+      filter: drop-shadow(0px 4px 4px $box-shadow-color);
+      border-radius: 4px;
+      background-color: transparent;
+    }
+    &__input::placeholder {
+      font-size: 16px;
+      line-height: calc(20 / 16);
 
-    font-weight: 700;
-    font-size: 16px;
-    line-height: calc(30 / 16);
+      color: $address-color;
+    }
+    &__btn {
+      position: relative;
+      margin-top: 48px;
+      padding: 10px 62px 10px 28px;
+      min-width: 200px;
+      height: 50px;
 
-    letter-spacing: 0.06em;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: calc(30 / 16);
 
-    color: $hero-color;
+      letter-spacing: 0.06em;
 
-    background: $accent-bg-color;
-    box-shadow: 0px 4px 4px $box-shadow-color;
-    border-radius: 4px;
-    border: transparent;
-  }
-  &__icon {
-    position: absolute;
-    top: 13px;
-    right: 28px;
-    fill: $header-bg-color;
+      color: $hero-color;
+
+      background: $accent-bg-color;
+      box-shadow: 0px 4px 4px $box-shadow-color;
+      border-radius: 4px;
+      border: transparent;
+    }
+    &__icon {
+      position: absolute;
+      top: 13px;
+      right: 28px;
+      fill: $header-bg-color;
+    }
   }
 }
