--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,6 +13,12 @@
   transform: translate(-50%, -50%);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+ @media screen and (max-width: 1199px){
+  &{
+      width: 450px; 
+  }
+
+ }
 
 &__btn {
   position: absolute;
