--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -47,7 +47,7 @@
 
   &__wrap {
     padding: 30px 0;
-    background-color: $header-bg-color;
+    background-color: $header-bg-color;}
   
   &__name {
     margin-bottom: 10px;
@@ -68,7 +68,6 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-  }
- 
+  
 }
 }
