--- a/css/main.css
+++ b/css/main.css
@@ -552,7 +552,7 @@ body {
   padding: 30px 0;
   background-color: #ffffff;
 }
-.team__wrap__name {
+.team__name {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -560,13 +560,13 @@ body {
   text-align: center;
   color: #212121;
 }
-.team__wrap__position {
+.team__position {
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.1875;
   text-align: center;
 }
-.team__wrap__item {
+.team__item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
@@ -641,6 +641,11 @@ body {
   }
 }
 @media screen and (min-width: 480px) and (max-width: 767px) {
+  .clients__title {
+    font-size: 28px;
+    line-height: 1.1785714286;
+    margin-bottom: 30px;
+  }
   .clients__list {
     display: flex;
     flex-wrap: wrap;
