--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -42,17 +42,23 @@
   }
 
   @media screen and (min-width: 480px) and (max-width: 767px) {
+    &__title {
+      font-size: 28px;
+      line-height: calc(33 / 28);
+      margin-bottom: 30px;
+    }
+   
     &__list {
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
     }
+    
     &__item {
       flex-basis: calc((100% - 30px) / 2);
     }
     &__link {
       width: 210px;
-      
     }
   }
   &__link {
