--- a/css/main.css
+++ b/css/main.css
@@ -506,6 +506,19 @@ body {
 .team {
   background-color: #f5f4fa;
 }
+.team__name {
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.1875;
+  color: #212121;
+}
+.team__position {
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.1875;
+  text-align: center;
+}
 .team__title {
   font-weight: 700;
   text-align: center;
