--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,4 +1,18 @@
 .team {
+  &__name {
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: calc(19 / 16);
+    color: $title-text-color;
+  }
+  &__position {
+    margin-bottom: 16px;
+    font-size: 16px;
+    line-height: calc(19 / 16);
+    text-align: center;
+  }
+
   background-color: $team-bg-color;
   &__title {
     font-weight: 700;
@@ -6,7 +20,7 @@
     text-align: center;
     color: $title-text-color;
   }
-   @media screen and (max-width: 767px) {
+  @media screen and (max-width: 767px) {
     &__item {
       display: inline-block;
       text-align: center;
@@ -30,7 +44,7 @@
       margin-bottom: 30px;
     }
   }
-  
+
   @media screen and (min-width: 1200px) {
     &__title {
       font-size: 36px;
@@ -47,8 +61,9 @@
 
   &__wrap {
     padding: 30px 0;
-    background-color: $header-bg-color;}
-  
+    background-color: $header-bg-color;
+  }
+
   &__name {
     margin-bottom: 10px;
     font-weight: 500;
@@ -68,6 +83,5 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-  
-}
+  }
 }
