--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -42,29 +42,28 @@
   }
 
   @media screen and (min-width: 480px) and (max-width: 767px) {
-    &__title {
-      font-size: 28px;
-      line-height: calc(33 / 28);
-      margin-bottom: 30px;
-    }
-   
-    &__list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-    }
-    
     &__item {
-      flex-basis: calc((100% - 30px) / 2);
+      display: inline-block;
     }
-    &__link {
-      width: 210px;
+    &__item:nth-child(odd) {
+      margin-right: 30px;
+      padding-top: 30px;
+    }
+
+    &__title {
+      font-size: 30px;
+      line-height: calc(33 / 28);
+    }
+
+    &__list {
+      display: block;
+      font-size: 0;
     }
   }
   &__link {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+    display: inline-block;
+    padding: 16px 50px;
+
     height: 92px;
     border: 1px solid $network-icon-color;
     border-radius: 4px;
