--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -2,101 +2,103 @@
   display: flex;
   align-items: center;
   @media screen and (max-width: 767px) {
-    padding-top: 16px;
-    padding-bottom: 15px;
+    & {
+      padding-top: 16px;
+      padding-bottom: 15px;
+      display: inherit;
+    }
     &__list {
-      display: none;}
-      &__item {
-        display: none;}
-        &__link {
-          display: none;}
-  
+      display: none;
+    }
+    &__item {
+      display: none;
+    }
+    &__link {
+      display: none;
+    }
   }
-  @media screen and (min-width: 768px) and (max-width: 1199px){
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    &__list {
+      margin-left: 88px;
+      display: flex;
+      align-items: center;
+    }
+    &__item:not(:last-child) {
+      margin-right: 50px;
+    }
+    &__link {
+      position: relative;
+      padding-top: 32px;
+      padding-bottom: 31px;
+      display: block;
+      font-weight: 500;
+      line-height: calc(16 / 14);
+      letter-spacing: 0.02em;
+      color: $title-text-color;
+      transition-property: color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    &__link--current::after {
+      display: block;
+      position: absolute;
+      bottom: -1px;
+      left: 0px;
+      width: 100%;
+      height: 4px;
+      content: '';
+      background-color: $accent-color;
+      border-radius: 2px;
+    }
+    &__link:hover,
+    &__link:focus {
+      color: $accent-color;
+    }
 
-  &__list {
-    margin-left: 88px;
-    display: flex;
-    align-items: center;
+    &__link--current {
+      color: $accent-color;
+    }
   }
-  &__item:not(:last-child) {
-    margin-right: 50px;
-  }
-  &__link {
-    position: relative;
-    padding-top: 32px;
-    padding-bottom: 31px;
-    display: block;
-    font-weight: 500;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.02em;
-    color: $title-text-color;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  &__link--current::after {
-    display: block;
-    position: absolute;
-    bottom: -1px;
-    left: 0px;
-    width: 100%;
-    height: 4px;
-    content: '';
-    background-color: $accent-color;
-    border-radius: 2px;
-  }
-  &__link:hover,
-  &__link:focus {
-    color: $accent-color;
-  }
+  @media screen and (min-width: 1200px) {
+    &__list {
+      margin-left: 93px;
+      display: flex;
+      align-items: center;
+    }
+    &__item:not(:last-child) {
+      margin-right: 50px;
+    }
+    &__link {
+      position: relative;
+      padding-top: 31px;
+      padding-bottom: 31px;
+      display: block;
+      font-weight: 500;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+      color: $title-text-color;
+      transition-property: color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    &__link--current::after {
+      display: block;
+      position: absolute;
+      bottom: -1px;
+      left: 0px;
+      width: 100%;
+      height: 4px;
+      content: '';
+      background-color: $accent-color;
+      border-radius: 2px;
+    }
+    &__link:hover,
+    &__link:focus {
+      color: $accent-color;
+    }
 
-  &__link--current {
-    color: $accent-color;
+    &__link--current {
+      color: $accent-color;
+    }
   }
-}
-@media screen and (min-width: 1200px){
-
-
-&__list {
-    margin-left: 93px;
-    display: flex;
-    align-items: center;
-  }
-  &__item:not(:last-child) {
-    margin-right: 50px;
-  }
-  &__link {
-    position: relative;
-    padding-top: 31px;
-    padding-bottom: 31px;
-    display: block;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: $title-text-color;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  &__link--current::after {
-    display: block;
-    position: absolute;
-    bottom: -1px;
-    left: 0px;
-    width: 100%;
-    height: 4px;
-    content: '';
-    background-color: $accent-color;
-    border-radius: 2px;
-  }
-  &__link:hover,
-  &__link:focus {
-    color: $accent-color;
-  }
-
-  &__link--current {
-    color: $accent-color;
-  }
-}
 }
