--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -59,7 +59,8 @@
       display: block;
       font-size: 0;
     }
-  }
+    
+  
   &__link {
     display: inline-block;
     padding: 16px 50px;
@@ -71,7 +72,8 @@
     transition-property: fill, border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  }}
+  
 
   &__link:hover,
   &__link:focus {
