--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -72,8 +72,9 @@
     transition-property: fill, border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }}
-  
+  }
+}
+
 
   &__link:hover,
   &__link:focus {
