--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -59,18 +59,22 @@
       display: block;
       font-size: 0;
     }
-  }
-  &__link {
-    display: inline-block;
-    padding: 16px 50px;
+    &__link {
+      width: 210px;
+    }
 
-    height: 92px;
-    border: 1px solid $network-icon-color;
-    border-radius: 4px;
-    fill: $network-icon-color;
-    transition-property: fill, border;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &__link {
+      display: inline-block;
+      padding: 16px 50px;
+
+      height: 92px;
+      border: 1px solid $network-icon-color;
+      border-radius: 4px;
+      fill: $network-icon-color;
+      transition-property: fill, border;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
   }
 
   &__link:hover,
@@ -78,4 +82,5 @@
     border: 1px solid $accent-color;
     fill: $accent-color;
   }
+  
 }
