--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -3,7 +3,37 @@
     text-align: center;
     color: $title-text-color;
   }
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    &__item {
+      display: inline-block;
+    }
+    &__item:nth-child(odd) {
+      margin-right: 30px;
+      padding-top: 30px;
+    }
+
+    &__title {
+      font-size: 30px;
+      line-height: calc(33 / 28);
+    }
+
+    &__list {
+      display: block;
+      font-size: 0;
+    }
+
+    &__link {
+      display: inline-block;
+      padding: 16px 50px;
+    }
+  }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
+    &__link {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+    }
+
     &__title {
       font-size: 28px;
       line-height: calc(33 / 28);
@@ -22,6 +52,11 @@
     }
   }
   @media screen and (min-width: 1200px) {
+    &__link {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+    }
     &__title {
       font-size: 36px;
       line-height: calc(42 / 36);
@@ -41,46 +76,22 @@
     }
   }
 
-  @media screen and (min-width: 480px) and (max-width: 767px) {
-    &__item {
-      display: inline-block;
-    }
-    &__item:nth-child(odd) {
-      margin-right: 30px;
-      padding-top: 30px;
-    }
-
-    &__title {
-      font-size: 30px;
-      line-height: calc(33 / 28);
-    }
-
-    &__list {
-      display: block;
-      font-size: 0;
-    }
-    &__link {
-      width: 210px;
-    }
-
-    &__link {
-      display: inline-block;
-      padding: 16px 50px;
-
-      height: 92px;
-      border: 1px solid $network-icon-color;
-      border-radius: 4px;
-      fill: $network-icon-color;
-      transition-property: fill, border;
-      transition-duration: 250ms;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    }
-  }
-
   &__link:hover,
   &__link:focus {
     border: 1px solid $accent-color;
     fill: $accent-color;
   }
-  
+  &__link {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 92px;
+    border: 1px solid $network-icon-color;
+    border-radius: 4px;
+    fill: $network-icon-color;
+    transition-property: fill, border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
