--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -3,7 +3,7 @@
     text-align: center;
     color: $title-text-color;
   }
-  @media screen and (min-width: 480px) and (max-width: 767px) {
+  @media screen and (max-width: 767px) {
     &__item {
       display: inline-block;
     }
