--- a/css/main.css
+++ b/css/main.css
@@ -625,6 +625,30 @@ body {
   text-align: center;
   color: #212121;
 }
+@media screen and (max-width: 767px) {
+  .clients {
+    display: inline-block;
+  }
+  .clients__item {
+    display: inline-block;
+  }
+  .clients__item:nth-child(odd) {
+    margin-right: 30px;
+    padding-top: 30px;
+  }
+  .clients__title {
+    font-size: 30px;
+    line-height: 1.1785714286;
+  }
+  .clients__list {
+    display: block;
+    font-size: 0;
+  }
+  .clients__link {
+    display: inline-block;
+    padding: 16px 20px;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients__link {
     display: inline-flex;
@@ -669,26 +693,6 @@ body {
   }
   .clients__list .item:not(:last-child) {
     margin-right: 30px;
-  }
-}
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .clients__item {
-    display: inline-block;
-  }
-  .clients__item:nth-child(odd) {
-    margin-right: 30px;
-    padding-top: 30px;
-  }
-  .clients__title {
-    font-size: 30px;
-    line-height: 1.1785714286;
-  }
-  .clients__list {
-    display: block;
-    font-size: 0;
-  }
-  .clients__link {
-    padding: 16px 50px;
   }
 }
 .clients__link:hover, .clients__link:focus {
