--- a/css/main.css
+++ b/css/main.css
@@ -631,10 +631,10 @@ body {
   }
   .clients__item {
     display: inline-block;
+    margin-top: 30px;
   }
   .clients__item:nth-child(odd) {
     margin-right: 30px;
-    padding-top: 30px;
   }
   .clients__title {
     font-size: 30px;
