--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -8,10 +8,11 @@
 
     &__item {
       display: inline-block;
+      margin-top: 30px;
     }
     &__item:nth-child(odd) {
       margin-right: 30px;
-      padding-top: 30px;
+      
     }
 
     &__title {
