--- a/css/main.css
+++ b/css/main.css
@@ -625,7 +625,7 @@ body {
   text-align: center;
   color: #212121;
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .clients {
     display: inline-block;
   }
