--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -3,7 +3,7 @@
     text-align: center;
     color: $title-text-color;
   }
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 480px) and (max-width: 767px) {
     display: inline-block;
 
     &__item {
@@ -12,7 +12,6 @@
     }
     &__item:nth-child(odd) {
       margin-right: 30px;
-      
     }
 
     &__title {
