--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -8,7 +8,7 @@
 
     &__item {
       display: inline-block;
-      padding-top: 30px;
+      margin-top: 30px;
     }
     &__item:nth-child(odd) {
       margin-right: 30px;
