--- a/css/main.css
+++ b/css/main.css
@@ -631,7 +631,7 @@ body {
   }
   .clients__item {
     display: inline-block;
-    padding-top: 30px;
+    margin-top: 30px;
   }
   .clients__item:nth-child(odd) {
     margin-right: 30px;
