--- a/css/main.css
+++ b/css/main.css
@@ -258,7 +258,7 @@ body {
   display: flex;
   justify-content: center;
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .contacts {
     display: none;
   }
@@ -408,7 +408,7 @@ body {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .advantages__picture {
     padding: 25px 0px;
     text-align: center;
@@ -467,7 +467,7 @@ body {
   margin-bottom: 0px;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .examples {
     display: none;
   }
@@ -726,14 +726,12 @@ body {
 }
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .footer__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: inline-block;
+    text-align: center;
   }
   .footer__item {
-    display: flex;
-    flex-direction: column;
+    display: inline-block;
+    text-align: center;
   }
   .footer__item--mobile {
     margin-bottom: 60px;
@@ -797,7 +795,7 @@ body {
   margin-top: 9px;
   margin-bottom: 9px;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .address__link--location, .address__link--tel, .address__link--mail {
     text-align: center;
     display: block;
@@ -1213,7 +1211,7 @@ body {
   gap: 30px;
   list-style: none;
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .card-set .item {
     flex-basis: calc((100% - 0px) / 1);
   }
