--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,5 +1,5 @@
 .advantages {
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 480px) and (max-width: 767px) {
     &__picture {
       padding: 25px 0px;
       text-align: center;
