--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ body {
   display: flex;
   align-items: center;
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .nav {
     padding-top: 16px;
     padding-bottom: 15px;
@@ -216,7 +216,7 @@ body {
   text-decoration: none;
   color: #2196f3;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .logo--footer {
     display: block;
     text-align: center;
@@ -226,9 +226,17 @@ body {
     font-size: 24px;
     line-height: 1.1666666667;
   }
+  .logo__secondary-part {
+    font-size: 24px;
+    line-height: 1.1666666667;
+  }
 }
 @media screen and (min-width: 1200px) {
   .logo {
+    font-size: 26px;
+    line-height: 1.1923076923;
+  }
+  .logo__secondary-part {
     font-size: 26px;
     line-height: 1.1923076923;
   }
@@ -237,18 +245,6 @@ body {
   font-family: "Raleway", sans-serif;
   text-decoration: none;
   color: #000000;
-}
-@media screen and (max-width: 1199px) {
-  .logo__secondary-part__secondary-part {
-    font-size: 24px;
-    line-height: 1.1666666667;
-  }
-}
-@media screen and (max-width: 1199px) and (min-width: 1200px) {
-  .logo__secondary-part__secondary-part {
-    font-size: 26px;
-    line-height: 1.1923076923;
-  }
 }
 .logo__secondary-part--light {
   color: #ffffff;
@@ -334,14 +330,32 @@ body {
 .hero {
   background-color: #2f303a;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .hero {
     padding: 118px 0px;
+  }
+  .hero__title {
+    width: 360px;
+    font-size: 26px;
+    line-height: 1.6153846154;
+  }
+  .hero__button {
+    min-width: 200px;
+    padding: 10px 24px;
   }
 }
 @media screen and (min-width: 1200px) {
   .hero {
     padding: 200px 0px;
+  }
+  .hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.3636363636;
+  }
+  .hero__button {
+    min-width: 216px;
+    padding: 10px 32px;
   }
 }
 .hero__title {
@@ -352,20 +366,6 @@ body {
   margin-left: auto;
   margin-bottom: 30px;
   color: #ffffff;
-}
-@media screen and (max-width: 1199px) {
-  .hero__title {
-    width: 360px;
-    font-size: 26px;
-    line-height: 1.6153846154;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .hero__title {
-    width: 696px;
-    font-size: 44px;
-    line-height: 1.3636363636;
-  }
 }
 .hero--overlay {
   max-width: 1600px;
@@ -394,18 +394,6 @@ body {
   border: 4px solid transparent;
   color: #ffffff;
   background-color: #2196f3;
-}
-@media screen and (max-width: 1199px) {
-  .hero__button {
-    min-width: 200px;
-    padding: 10px 24px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .hero__button {
-    min-width: 216px;
-    padding: 10px 32px;
-  }
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
@@ -549,7 +537,7 @@ body {
     flex-basis: calc((100% - 30px) / 2);
   }
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .team__title {
     font-size: 28px;
     line-height: 1.1785714286;
@@ -978,7 +966,7 @@ body {
   transform: translate(-50%, -50%);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .modal {
     width: 450px;
   }
@@ -1153,14 +1141,14 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .portfolio__nav {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 40px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .portfolio__nav {
     display: flex;
     justify-content: center;
