--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,13 +1,32 @@
 .hero {
   background-color: $hero-bg-color;
-  @media screen and (max-width: 1199px) {
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
     & {
       padding: 118px 0px;
+    }
+    &__title {
+      width: 360px;
+
+      font-size: 26px;
+      line-height: calc(42 / 26);
+    }
+    &__button {
+      min-width: 200px;
+      padding: 10px 24px;
     }
   }
   @media screen and (min-width: 1200px) {
     & {
       padding: 200px 0px;
+    }
+    &__title {
+      width: 696px;
+      font-size: 44px;
+      line-height: calc(60 / 44);
+    }
+    &__button {
+      min-width: 216px;
+      padding: 10px 32px;
     }
   }
 
@@ -19,23 +38,6 @@
     margin-left: auto;
     margin-bottom: 30px;
     color: $hero-color;
-  }
-
-  @media screen and (max-width: 1199px) {
-    &__title {
-      width: 360px;
-
-      font-size: 26px;
-      line-height: calc(42 / 26);
-    }
-  }
-
-  @media screen and (min-width: 1200px) {
-    &__title {
-      width: 696px;
-      font-size: 44px;
-      line-height: calc(60 / 44);
-    }
   }
 
   &--overlay {
@@ -54,7 +56,6 @@
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
-    
 
     font-family: inherit;
     font-weight: 700;
@@ -71,17 +72,5 @@
 
     color: $hero-color;
     background-color: $accent-color;
-  }
-  @media screen and (max-width: 1199px) {
-    &__button {
-      min-width: 200px;
-      padding: 10px 24px;
-    }
-  }
-  @media screen and (min-width: 1200px) {
-    &__button {
-      min-width: 216px;
-      padding: 10px 32px;
-    }
   }
 }
