--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,7 +1,7 @@
 .nav {
   display: flex;
   align-items: center;
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 480px)  and (max-width: 767px) {
     & {
       padding-top: 16px;
       padding-bottom: 15px;
