--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -37,7 +37,7 @@
       flex-basis: calc((100% - 30px) / 2);
     }
   }
-  @media screen and (max-width: 1199px) {
+  @media screen and (min-width: 480px)   and (max-width: 1199px) {
     &__title {
       font-size: 28px;
       line-height: calc(33 / 28);
