--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,5 +25,6 @@
 @import './components/portfolio';
 @import './components/card-set';
 @import './components/product';
+@import './components/mobile.menu';
 
 
