--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,10 @@ body {
 .header {
   border-bottom: 1px solid #ececec;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
+  .header {
+    position: relative;
+  }
   .header__group {
     display: inherit;
   }
@@ -945,6 +948,7 @@ body {
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: scroll;
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -1141,11 +1145,14 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .portfolio__nav {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 40px;
+  }
+  .portfolio__item {
+    margin-bottom: 15px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -1268,4 +1275,111 @@ body {
   font-size: 18px;
   line-height: 1.56;
   color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 796px;
+    padding: 48px 40px;
+    background-color: #ffffff;
+  }
+  .menu-container.is-open {
+    display: block;
+  }
+  .menu-nav__list {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 302px;
+  }
+  .menu-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .menu-nav__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
+    color: #212121;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-nav__link:hover, .menu-nav__link:focus {
+    color: #2196f3;
+  }
+  .menu-nav__link--current {
+    color: #2196f3;
+  }
+  .menu-contacts__list {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 64px;
+  }
+  .menu-contacts__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .menu-contacts__link {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.1666666667;
+    letter-spacing: 0.02em;
+    color: #757575;
+  }
+  .menu-contacts__link--mobile {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.1764705882;
+    color: #2196f3;
+  }
+  .menu-socials__list {
+    display: flex;
+    align-items: center;
+  }
+  .menu-socials__item:not(:last-child) {
+    margin-right: 20px;
+  }
+  .menu-socials__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.2222222222;
+    letter-spacing: 0.02em;
+    color: #2196f3;
+  }
+  .menu-button {
+    position: absolute;
+    top: 22px;
+    right: 17px;
+    border: none;
+    background-color: transparent;
+  }
+  .menu-button .mobile-btn-icon__menu {
+    display: none;
+  }
+  .menu-button.is-open .mobile-btn-icon__menu {
+    display: block;
+  }
+  .menu-button.is-open .mobile-btn-icon__close {
+    display: none;
+  }
+  .mobile-btn-icon__close {
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-btn-icon__close:hover,
+.mobile-btn-icon__close:focus {
+    fill: #2196f3;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: none;
+  }
+  .menu-button {
+    display: none;
+  }
 }/*# sourceMappingURL=main.css.map */
