--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -9,6 +9,7 @@
   background: $backdrop-bg-color;
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   overflow-y: scroll;
 
   &.is-hidden {
   opacity: 0;
