--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,9 +1,13 @@
 .header {
   border-bottom: 1px solid $ph-border-color;
 
-  @media screen and (min-width: 480px) and (max-width: 767px) {
+  @media screen and (max-width: 767px) {
+    & {
+      position: relative;
+    }
+
     &__group {
-      display:inherit;
+      display: inherit;
     }
   }
   @media screen and (min-width: 768px) {
