--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -11,14 +11,17 @@
     clip-path: inset(50%);
     margin: -1px;
   }
-  @media screen  and (min-width: 480px) and (max-width: 767px) {
+  @media screen and (max-width: 767px) {
     &__nav {
       display: flex;
       flex-wrap: wrap;
       margin-bottom: 40px;
     }
+    &__item {
+      margin-bottom: 15px;
+    }
   }
-  @media screen and (min-width: 768px) and (max-width: 1199px)  {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     &__nav {
       display: flex;
       justify-content: center;
@@ -36,6 +39,7 @@
   &__nav .item:not(:last-child) {
     margin-right: 8px;
   }
+
   &__btn {
     padding: 6px 22px;
     border-radius: 4px;
