--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ body {
   display: flex;
   align-items: center;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .nav {
     padding-top: 16px;
     padding-bottom: 15px;
@@ -219,7 +219,7 @@ body {
   text-decoration: none;
   color: #2196f3;
 }
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
   .logo--footer {
     display: block;
     text-align: center;
@@ -257,7 +257,7 @@ body {
   display: flex;
   justify-content: center;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .contacts {
     display: none;
   }
@@ -333,7 +333,7 @@ body {
 .hero {
   background-color: #2f303a;
 }
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
   .hero {
     padding: 118px 0px;
   }
@@ -399,7 +399,7 @@ body {
   background-color: #2196f3;
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .advantages__picture {
     padding: 25px 0px;
     text-align: center;
@@ -458,7 +458,7 @@ body {
   margin-bottom: 0px;
 }
 
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
   .examples {
     display: none;
   }
@@ -540,7 +540,7 @@ body {
     flex-basis: calc((100% - 30px) / 2);
   }
 }
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
   .team__title {
     font-size: 28px;
     line-height: 1.1785714286;
@@ -616,7 +616,7 @@ body {
   text-align: center;
   color: #212121;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .clients {
     display: inline-block;
   }
@@ -712,7 +712,7 @@ body {
   text-transform: uppercase;
   color: #ffffff;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .footer__container {
     display: inline-block;
     text-align: center;
@@ -783,7 +783,7 @@ body {
   margin-top: 9px;
   margin-bottom: 9px;
 }
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
   .address__link--location, .address__link--tel, .address__link--mail {
     text-align: center;
     display: block;
@@ -858,7 +858,7 @@ body {
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 }
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
   .subscription {
     display: flex;
     flex-direction: column;
@@ -962,17 +962,21 @@ body {
   padding: 40px;
   position: absolute;
   left: 50%;
-  top: 50%;
-  width: 528px;
+  top: 400px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
   .modal {
     width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
   }
 }
 .modal__btn {
@@ -992,7 +996,7 @@ body {
 .register {
   font-size: 12px;
 }
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
   .register__text-label--mobile {
     line-height: 1.1666666667;
   }
@@ -1203,7 +1207,7 @@ body {
   gap: 30px;
   list-style: none;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .card-set .item {
     flex-basis: calc((100% - 0px) / 1);
   }
