--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -34,6 +34,7 @@
     display: inline-block;
     font-style: normal;
     line-height: 1.5;
+    text-align: center;
     text-decoration: none;
 
     color: $hero-color;
