--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,8 +14,7 @@
 
   @media screen and (min-width: 320px) and (max-width: 767px) {
     &__container {
-      display: inline-block;
-      text-align: center;
+      display: block;
     }
     &__item {
       display: inline-block;
@@ -56,7 +55,6 @@
     &__networks--mobile {
       margin-bottom: 60px;
     }
-   
   }
   @media screen and (min-width: 1200px) {
     &__container {
@@ -86,5 +84,3 @@
     }
   }
 }
-
-
