--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -15,6 +15,7 @@
   @media screen and (min-width: 320px) and (max-width: 767px) {
     &__container {
       display: block;
+      text-align: center;
     }
     &__item {
       display: inline-block;
