--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -62,7 +62,7 @@
       text-align: center;
     }
     &__input {
-      min-width: 290px;
+      width: 290px;
     }
     &__btn {
       display: inline-flex;
