--- a/css/main.css
+++ b/css/main.css
@@ -868,6 +868,7 @@ body {
     text-align: center;
   }
   .subscription__input {
+    align-items: center;
     min-width: 290px;
     max-width: 450px;
   }
