--- a/css/main.css
+++ b/css/main.css
@@ -852,7 +852,7 @@ body {
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 }
-@media screen and (min-width: 320px) and (max-width: 1199px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .subscription {
     display: flex;
     flex-direction: column;
@@ -867,13 +867,37 @@ body {
   .subscription__label--mobile {
     text-align: center;
   }
+  .subscription__btn {
+    display: inline-flex;
+    min-width: 200px;
+  }
   .subscription__input {
     align-items: center;
     max-width: 450px;
   }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .subscription {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .subscription__form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .subscription__label--mobile {
+    text-align: center;
+  }
   .subscription__btn {
     display: inline-flex;
     min-width: 200px;
+  }
+  .subscription__input {
+    align-items: center;
+    width: 450px;
   }
 }
 @media screen and (min-width: 1200px) {
