--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -46,7 +46,7 @@
 
     color: $address-color;
   }
-  @media screen and (min-width: 320px) and (max-width: 1199px) {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
     & {
       display: flex;
       flex-direction: column;
@@ -61,15 +61,42 @@
     &__label--mobile {
       text-align: center;
     }
+
+    &__btn {
+      display: inline-flex;
+
+      min-width: 200px;
+    }
     &__input {
       align-items: center;
 
       max-width: 450px;
     }
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    & {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+    &__form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+    &__label--mobile {
+      text-align: center;
+    }
     &__btn {
       display: inline-flex;
 
       min-width: 200px;
+    }
+    &__input {
+      align-items: center;
+
+      width: 450px;
     }
   }
 
