--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -47,6 +47,7 @@
 
     &__item--mobile {
       margin-bottom: 60px;
+      margin-right: 76px;
     }
     &__desc--mobile {
       display: block;
@@ -54,6 +55,8 @@
       margin-top: 5px;
     }
     &__networks--mobile {
+      margin-left: 165px;
+      margin-right: 76px;
       margin-bottom: 60px;
     }
   }
