--- a/css/main.css
+++ b/css/main.css
@@ -814,8 +814,6 @@ body {
 }
 
 .subscription__btn {
-  position: relative;
-  padding: 10px 62px 10px 28px;
   height: 50px;
   font-weight: 700;
   font-size: 16px;
@@ -872,6 +870,9 @@ body {
   }
   .subscription__btn {
     display: inline-flex;
+    position: relative;
+    padding: 10px 62px 10px 28px;
+    height: 50px;
     min-width: 200px;
   }
   .subscription__input {
@@ -896,6 +897,9 @@ body {
   }
   .subscription__btn {
     display: inline-flex;
+    position: relative;
+    padding: 10px 62px 10px 28px;
+    height: 50px;
     min-width: 200px;
   }
   .subscription__input {
