--- a/css/main.css
+++ b/css/main.css
@@ -324,37 +324,65 @@ body {
 }
 
 .hero {
+  padding: 118px 0px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: #2f303a;
-}
-@media screen and (min-width: 320px) and (max-width: 1199px) {
-  .hero {
-    padding: 118px 0px;
-  }
-  .hero__title {
-    width: 360px;
-    font-size: 26px;
-    line-height: 1.6153846154;
-  }
-  .hero__button {
-    min-width: 200px;
-    padding: 10px 24px;
-  }
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: #c4c4c4;
 }
 @media screen and (min-width: 1200px) {
   .hero {
     padding: 200px 0px;
   }
-  .hero__title {
-    width: 696px;
-    font-size: 44px;
-    line-height: 1.3636363636;
-  }
-  .hero__button {
-    min-width: 216px;
-    padding: 10px 32px;
+}
+@media (min-width: 320px) {
+  .hero--overlay {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-480x1.jpg);
   }
 }
+@media (min-width: 320px) and (min-resolution: 2dppx) {
+  .hero--overlay {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-480x2.jpg);
+  }
+}
+@media (min-width: 480px) {
+  .hero--overlay {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-480x1.jpg);
+  }
+}
+@media (min-width: 480px) and (min-resolution: 2dppx) {
+  .hero--overlay {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-480x2.jpg);
+  }
+}
+@media (min-width: 768px) {
+  .hero--overlay {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-768x1.jpg);
+  }
+}
+@media (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero--overlay {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-768x2.jpg);
+  }
+}
+@media (min-width: 1200px) {
+  .hero--overlay {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-1200x1.jpg);
+  }
+}
+@media (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero--overlay {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-1200x2.jpg);
+  }
+}
+
 .hero__title {
+  width: 360px;
+  font-size: 26px;
+  line-height: 1.6153846154;
   font-weight: 900;
   text-align: center;
   letter-spacing: 0.06em;
@@ -363,16 +391,14 @@ body {
   margin-bottom: 30px;
   color: #ffffff;
 }
-.hero--overlay {
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-color: #c4c4c4;
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.3636363636;
+  }
 }
+
 .hero__button {
   display: inline-block;
   margin-left: auto;
@@ -380,6 +406,8 @@ body {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
+  min-width: 200px;
+  padding: 10px 24px;
   line-height: 1.875;
   display: flex;
   align-items: center;
@@ -390,6 +418,12 @@ body {
   border: 4px solid transparent;
   color: #ffffff;
   background-color: #2196f3;
+}
+@media screen and (min-width: 1200px) {
+  .hero__button {
+    min-width: 216px;
+    padding: 10px 32px;
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
